RESOLVED FIXED248532
Fix unified build of LibWebRTCProviderGStreamer
https://bugs.webkit.org/show_bug.cgi?id=248532
Summary Fix unified build of LibWebRTCProviderGStreamer
Olivier Blin
Reported 2022-11-30 06:39:51 PST
LibWebRTCProvider.h needs to be included
Attachments
Olivier Blin
Comment 1 2022-11-30 06:41:03 PST
EWS
Comment 2 2022-12-12 06:44:05 PST
Committed 257726@main (e60aeb1446ef): <https://commits.webkit.org/257726@main> Reviewed commits have been landed. Closing PR #6968 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-12-12 06:45:24 PST
Note You need to log in before you can comment on or make changes to this bug.