Fix unified build of LibWebRTCProviderGStreamer https://bugs.webkit.org/show_bug.cgi?id=248532

Reviewed by Youenn Fablet.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/LibWebRTCProviderGStreamer.h: LibWebRTCProvider.h needs to be included

Canonical link: https://commits.webkit.org/257726@main