Source/WebCore/platform/mediastream/libwebrtc/gstreamer/LibWebRTCProviderGStreamer.h
@@ -29,6 +29,7 @@
 
 #include "GStreamerVideoDecoderFactory.h"
 #include "GStreamerVideoEncoderFactory.h"
+#include "LibWebRTCProvider.h"
 
 namespace WebCore {
 
